--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
             >clique aqui</a
           >
         </p>
-        <button id="gerarProtocolos">Gerar Protocolos</button>
+        <div class="nav-links">
+          <a href="horizontais.html" class="nav-link">Protocolos - Horizontais</a>
+          <a href="predios.html" class="nav-link">Protocolos - Prédios</a>
+        </div>
+
       </div>
     </div>
     <script src="script.js"></script>
